fixed the grid cols in smaller screen and aligned the add to cart button to  the center

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@
 
 
 @theme {
-  --breakpoint-xs: 30rem;
+  --breakpoint-xs: 20rem;
 }
